--- a/app/src/main/res/layout/fragment_movement_list.xml
+++ b/app/src/main/res/layout/fragment_movement_list.xml
@@ -4,10 +4,14 @@
     android:layout_height="match_parent"
     tools:context="com.maximomrtnz.moneybox.fragments.MovementListFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/movement_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/add_task_wrapper"
+        android:layout_marginBottom="12dp"
+        android:orientation="vertical"
+        android:scrollbars="none"/>
 
 </FrameLayout>
